Fix pop bug